# yt_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.middle  Dockerfile.prod  LICENSE  Makefile  README.md  api.http  docker-compose.yml  entrypoint.dev.sh  entrypoint.middle.sh  entrypoint.nginx.sh  entrypoint.prod.sh  gunicorn.conf.py  manage.py  nginx-cert.conf  nginx.conf  nginx.monitoring.conf  nginx.template.conf  pyproject.toml  requirements.txt  test.html
core/: celerybeat-schedule  manage.py  pytest.ini
core/api/v1/: urls.py
core/api/v1/channels/: serializers.py  urls.py
core/api/v1/payments/: serializers.py  urls.py  views.py
core/api/v1/posts/: serializers.py  urls.py  views.py
core/api/v1/reports/: serializers.py  urls.py  views.py
core/api/v1/schema_serializers/: users_serializers.py
core/api/v1/users/: serializers.py  urls.py  views.py
core/api/v1/videos/: urls.py
core/apps/channels/: apps.py  containers.py  errors.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
core/apps/channels/converters/: channels.py  subscriptions.py
core/apps/channels/entities/: channels.py  subscriptions.py
core/apps/channels/exceptions/: channels.py  subscriptions.py  upload.py
core/apps/channels/migrations/: 0001_initial.py  0002_channel_channel_avatar.py  0002_initial.py  0003_remove_channel_channel_avatar_and_more.py  0004_remove_channel_avatar_s3_bucket.py  0005_alter_channel_country_alter_channel_description.py  0006_alter_channel_slug.py  0007_alter_channel_avatar_s3_key_alter_channel_country_and_more.py
core/apps/channels/providers/: channels.py
core/apps/channels/repositories/: channels.py
core/apps/channels/services/: channels.py  s3_channels.py
core/apps/channels/views/: channel_upload_views.py  channel_views.py
core/apps/common/: auth_backends.py  cloudfront_rsa_signer.py  constants.py  containers.py  enums.py  errors.py  exceptions.py  loggers.py  mixins.py  models.py  pagination.py  permissions.py  tasks.py  throttles.py  utils.py
core/apps/common/adapters/: boto_file_provider.py  celery_file_provider.py
core/apps/common/clients/: boto_client.py  email_client.py
core/apps/common/exceptions/: captcha.py  comments.py  exceptions.py
core/apps/payments/: constants.py  containers.py  enums.py  errors.py  exceptions.py  throttles.py
core/apps/posts/: admin.py  apps.py  constants.py  containers.py  errors.py  exceptions.py  models.py
core/apps/reports/: apps.py  containers.py  errors.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/apps/users/: admin.py  apps.py  constants.py  containers.py  entities.py  errors.py  models.py  oauth2_backends.py  oauth2_backends_mixins.py  oauth_backends.py  permissions.py  routers.py  serializers.py  signals.py  tasks.py  throttles.py  urls.py  views.py
core/apps/videos/: admin.py  apps.py  containers.py  errors.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
core/project/: asgi.py  celery.py  containers.py  urls.py  wsgi.py
core/project/settings/: dev.py  main.py  middle.py  prod.py
core/tests/: conftest.py
core/tests/api/: test_auth_email_throttle.py  test_channels.py  test_likes.py  test_playlists.py  test_video_views.py  test_videos.py
core/tests/factories/: channels.py  comments.py  common.py  posts.py  reports.py  video_comments.py  videos.py
core/tests/use_cases/: conftest.py  test_comments.py
docker_compose/: docker-compose-certbot-create.yml  docker-compose-certbot-renew.yml  docker-compose-dev.yml  docker-compose-middle.yml  docker-compose-prod.yml  docker-compose.certbot.yml  monitoring.yml  storages.yml
docker_compose/configs/: prometheus.yml  promtail-config.yml
yt/: manage.py  schema.yml
yt/api/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
yt/api/migrations/: 0001_initial.py  0001_squashed_0003_alter_channel_country.py  0002_channel_country_videoview.py  0003_alter_channel_country.py  0004_videolike_alter_video_options_remove_video_likes_and_more.py  0005_videoview_channel_videoview_ip_address.py
yt/api/v1/: schema.yml  urls.py
yt/apps/channels/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
yt/apps/common/: mixins.py  pagination.py  permissions.py  throttles.py
yt/apps/posts/: models.py
yt/apps/reports/: containers.py  models.py  permissions.py  serializers.py  views.py
yt/apps/users/: serializers.py  tasks.py  urls.py  views.py
yt/apps/videos/: admin.py  containers.py  filters.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
yt/scripts/: change_random_date.py  create_channel.py  create_videos.py  get_s3_url.py  multiple_channels.py  multiple_subs.py
yt/yt/: asgi.py  celery.py  containers.py  settings.py  urls.py  wsgi.py
yt/yt/settings/: main.py
(+287 files in other folders)
