[project]
name = "yt-api"
version = "0.1.0"
description = ""
authors = [
    {name = "henwix",email = "492b672abx1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (==5.1.6)",
    "psycopg2 (==2.9.10)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.4.0)",
    "django-storages (==1.14.5)",
    "boto3 (==1.37.6)",
    "celery (==5.4.0)",
    "django-celery-beat (==2.7.0)",
    "django-celery-results (==2.5.1)",
    "django-redis (==5.4.0)",
    "djoser (==2.3.1)",
    "drf-spectacular (==0.28.0)",
    "django-filter (==25.1)",
    "punq (==0.7.0)",
    "pillow (==11.1.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
django-silk = "5.3.2"
ipython = "8.32.0"
pytest-django = "4.10.0"
django-extensions = "3.2.3"
factory-boy = "3.3.3"

