[project]
name = "yt-api"
version = "0.1.0"
description = ""
authors = [
    {name = "henwix",email = "492b672abx1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (==5.1.6)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.4.0)",
    "boto3 (==1.37.6)",
    "celery (==5.4.0)",
    "django-celery-beat (==2.7.0)",
    "django-celery-results (==2.5.1)",
    "django-redis (==5.4.0)",
    "drf-spectacular (==0.28.0)",
    "django-filter (==25.1)",
    "punq (==0.7.0)",
    "pillow (==11.1.0)",
    "django-extensions (==3.2.3)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-prometheus (>=2.3.1,<3.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "stripe (>=12.2.0,<13.0.0)",
    "psycopg2 (==2.9.10)",
    "social-auth-app-django (>=5.5.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ipython = "8.32.0"
pytest-django = "4.10.0"
factory-boy = "3.3.3"
isort = "^6.0.1"
pre-commit = "^4.2.0"
django-silk = "5.3.2"
tqdm = "^4.67.1"



[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings.dev"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["A003", "A002", "B904"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-third-party = ["django", "rest_framework"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
